--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -3,6 +3,11 @@
 # Required APIs: Maps JavaScript API, Places API, Maps Static API
 VITE_GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
 
+# (Optional) Air Quality layer — AQI heatmap tiles
+# Enable "Air Quality API" in Cloud Console, then use the same key or a separate one
+# https://developers.google.com/maps/documentation/air-quality/get-api-key
+# VITE_AIR_QUALITY_API_KEY=your_key_here
+
 # (Optional) Google Maps Map ID — enables 3D tilt on satellite view
 # Create at: https://console.cloud.google.com/google/maps-apis/studio/maps
 # Select "JavaScript" map type, "Vector" rendering
