--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,8 +6,9 @@ GEMINI_API_KEY=your_gemini_api_key_here
 # Same key as the frontend, needs "Maps Static API" enabled
 GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
 
-# Path to the Sentinel-2 GeoTIFF heat map file (optional — synthetic fallback available)
-HEATMAP_TIFF_PATH=data/heat_map.tif
+# Path to the Sentinel-2 GeoTIFF heat map file (optional — synthetic fallback if missing)
+# Use data/vancouver_lst.tif if you have downloaded the Vancouver LST file.
+HEATMAP_TIFF_PATH=data/vancouver_lst.tif
 
 # Default map center (Vancouver)
 DEFAULT_LAT=49.2827
