--- a/backend/.env.example
+++ b/backend/.env.example
@@ -12,3 +12,8 @@ HEATMAP_TIFF_PATH=data/heat_map.tif
 # Default map center (Vancouver)
 DEFAULT_LAT=49.2827
 DEFAULT_LON=-123.1207
+
+# Supabase (for caching AI visualizations)
+# Get from: https://supabase.com/dashboard/project/_/settings/api
+SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_KEY=your_service_role_key_here
